@@ -18,7 +18,7 @@
     <string id="30018">Confluence (by DiMartino)</string>
     <string id="30019">Confluence (by RussakHH)</string>
     <string id="30020">Enable Search History</string>
-    <string id="30021">Python-Libtorrent</string>
+    <string id="30021">python-libtorrent</string>
     <string id="30022">Ace Stream</string>
     <string id="30023">P2P Player</string>
     <string id="30024">Rest Settings in Programms - AceStream Client</string>
@@ -35,7 +35,7 @@
     <string id="30035">Open Torrent File</string>
     <string id="30036">Open Context Menu</string>
     <string id="30037">Download via Torrent-client</string>
-    <string id="30038">Download via Python-Libtorrent</string>
+    <string id="30038">Download via python-libtorrent</string>
     <string id="30039">Sort search results by seeds</string>
     <string id="30040">Custom search option phrase</string>
     <string id="30041">Encryption</string>
@@ -52,6 +52,10 @@
     <string id="30052">Use random ports</string>
     <string id="30053">Port for incoming connections</string>
     <string id="30054">Pre-buffer amount before start playing, Mb</string>
+    <string id="30055">Autoplay next episode (or ask)</string>
+    <string id="30056">Device configuration</string>
+    <string id="30057">Average/Good PC</string>
+    <string id="30058">Below average PC/router</string>
     <string id="30101">Interface</string>
     <string id="30102">P2P Network</string>
     <string id="30103">Advanced</string>
@@ -76,6 +80,7 @@
     <string id="30417">Clear Storage</string>
     <string id="30418">Choose searcher</string>
     <string id="30419">You don't have external searcher. Please install it first.</string>
+
 
 
 </strings>
