@@ -18,7 +18,7 @@
     <string id="30018">Confluence (by DiMartino)</string>
     <string id="30019">Confluence (by RussakHH)</string>
     <string id="30020">אפשר היסטוריית חיפוש</string>
-    <string id="30021">Python-Libtorrent (מומלץ)</string>
+    <string id="30021">python-libtorrent (מומלץ)</string>
     <string id="30022">Ace Stream (ללא מגנטים)</string>
     <string id="30023">נגן P2P</string>
     <string id="30024">איפוס הגדרות של תוכניות - AceStream</string>
@@ -35,7 +35,7 @@
     <string id="30035">פתח קובץ טורנט</string>
     <string id="30036">פתח תפריט הקשר</string>
     <string id="30037">הורד באמצעות טורנט</string>
-    <string id="30038">הורד באמצעות Python-Libtorrent</string>
+    <string id="30038">הורד באמצעות python-libtorrent</string>
     <string id="30039">מיין תוצאות חיפוש על ידי זרעים</string>
     <string id="30040">חיפוש מותאם אישית</string>
     <string id="30041">הצפנה</string>
