@@ -1,5 +1,11 @@
 ﻿English changelog at http://bit.ly/1MfSVUP
 
+[B]Version 2.4.4[/B]
+[+] Кнопка редатировать в Истории Поиска
+[+] Переключатель автоматического запуска следующего эпизода
+[+] Исправлено ограничение скорости Torrent2HTTP, которое на самом деле измерялось в MB/s, а не Mbit/s
+[+] Настройки для девайсов/ПК разной мощности у python-libtorrent
+
 [B]Version 2.4.3[/B]
 [+] Добавлена поддержка торрент-клиента qBittorent
 
@@ -10,7 +16,7 @@
 [+] Плеер Torrent2HTTP от anteo теперь по-умолчанию для новых пользователей
 
 [B]Version 2.4.0[/B]
-[+] Удален плеер BTclient
+[-] Удален плеер BTclient
 [+] Добавлен плеер Torrent2HTTP от anteo
 
 [B]Version 2.3.8[/B]
